// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MilestoneBadge should match snapshot for achieved milestone 1`] = `
<div>
  <div
    aria-label="🏆 Milestone Unlocked: 100 Movies!"
    class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-deletable MuiChip-deletableColorDefault MuiChip-filledDefault css-l1hsaq-MuiButtonBase-root-MuiChip-root"
    data-mui-internal-clone-element="true"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorDefault css-1wdc28j-MuiSvgIcon-root"
      data-testid="LocalMoviesIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M18 3v2h-2V3H8v2H6V3H4v18h2v-2h2v2h8v-2h2v2h2V3zM8 17H6v-2h2zm0-4H6v-2h2zm0-4H6V7h2zm10 8h-2v-2h2zm0-4h-2v-2h2zm0-4h-2V7h2z"
      />
    </svg>
    <span
      class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
    >
      100 Movies
    </span>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-deleteIcon MuiChip-deleteIconSmall MuiChip-deleteIconColorDefault MuiChip-deleteIconFilledColorDefault css-1wdc28j-MuiSvgIcon-root"
      data-testid="EmojiEventsIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
      />
    </svg>
  </div>
</div>
`;

exports[`MilestoneBadge should match snapshot for unachieved milestone 1`] = `
<div>
  <div
    aria-label="Next Goal: 500 Episodes"
    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1uktzfc-MuiChip-root"
    data-mui-internal-clone-element="true"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorDefault css-1wdc28j-MuiSvgIcon-root"
      data-testid="TvIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2m0 14H3V5h18z"
      />
    </svg>
    <span
      class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
    >
      500 Episodes
    </span>
  </div>
</div>
`;
